<resources>
    <string name="app_name" translatable="false">Firstapp</string>
    <string name="enter_name">enter name</string>
    <string name="submit" translatable="false">submit</string>
    <string name="cancel" translatable="false">cancel</string>
    <string name="textview" translatable="false">Username</string>
    <string name="login" translatable="false">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="select_image" translatable="false">SELECT IMAGE</string>
    <string name="profile_picture" translatable="false">Profile picture</string>
    <string name="helpingMessageOne" translatable="false">Next time you will see your last alarm here</string>
    <string name="helpingMessageTwo" translatable="false">Set the alarm in the future with the old settings</string>
    <string name="mon" translatable="false">M</string>
    <string name="tue" translatable="false">T</string>
    <string name="wed" translatable="false">W</string>
    <string name="thu" translatable="false">TH</string>
    <string name="fri" translatable="false">F</string>
    <string name="sat" translatable="false">SA</string>
    <string name="sun" translatable="false">SU</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="time_will_be_shown_here" translatable="false">Time: </string>
    <string name="set_alarm" translatable="false">Set Alarm</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="showdata" translatable="false">Show Data</string>
    <string name="count">set timer</string>
    <string name="toast">Toast</string>
    <string name="enter_time_in_seconds">enter time in seconds</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>