<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlBackgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectedTime"
        android:textSize="22sp"
        android:gravity="center"/>

    <RelativeLayout
        android:id="@+id/rlBackgroundHelper"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        android:onClick="rlButtonLayoutOnClickListener"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFirstHelpingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:padding="5dp"
            android:text="@string/helpingMessageOne"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvSecondHelpingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="60dp"
            android:padding="5dp"
            android:text="@string/helpingMessageTwo"
            android:visibility="gone" />

        <Button
            android:id="@+id/selectTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-53dp"
            android:text="Select Time" />

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:text="@string/time_will_be_shown_here"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:focusable="true"
        android:onClick="rlButtonLayoutOnClickListener"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAlarmTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="Time: " />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAlarmTime"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/mon"
                android:textColor="#689F38"
                android:theme="@style/dayOfWeekStyle" />

            <TextView
                android:id="@+id/tvTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/tue"
                android:textColor="#689F38"
                android:theme="@style/dayOfWeekStyle" />

            <TextView
                android:id="@+id/tvWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/wed"
                android:textColor="#689F38"
                android:theme="@style/dayOfWeekStyle" />

            <TextView
                android:id="@+id/tvThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/thu"
                android:textColor="#689F38"
                android:theme="@style/dayOfWeekStyle" />

            <TextView
                android:id="@+id/tvFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/fri"
                android:textColor="#689F38"
                android:theme="@style/dayOfWeekStyle" />

            <TextView
                android:id="@+id/tvSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/sat"
                android:textColor="#689F38"
                android:theme="@style/dayOfWeekStyle" />

            <TextView
                android:id="@+id/tvSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/sun"
                android:textColor="#689F38"
                android:theme="@style/dayOfWeekStyle" />
        </LinearLayout>



    </RelativeLayout>

    <ImageButton
        android:id="@+id/ibAdditionalSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:background="@color/customTransparentColor"
        android:clickable="true"
        android:contentDescription="@string/action_settings"
        android:focusable="true"
        />

    <!--Button to show TimePicker dialog-->

    <!--Time will be shown in this textView-->

</RelativeLayout>